--- a/TestUnixToLinux/.settings/org.eclipse.core.resources.prefs
+++ b/TestUnixToLinux/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding/133.139.48.198_via_tmp.txt=EUC-JP
 encoding/192.168.242.140_tmp.txt=EUC-JP
 encoding/192.168.242.141_tmp.txt=EUC-JP
 encoding/192.168.242.141_via_tmp.txt=EUC-JP
